--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/mINI"]
 	path = libs/mINI
 	url = https://github.com/metayeti/mINI
+[submodule "libs/nxmp-devoptabs"]
+	path = libs/nxmp-devoptabs
+	url = git@github.com:proconsule/nxmp-devoptabs.git
